Send orientation change events to sub frames even if parent isn't active.

When a frame receive an orientatio change notification, it only carry
the notification over if it is active but the iframe might be listening
to the event and not the frame.

Unfortunately, the test checking this was subtly broken because it
initialised itself by looking for the current orientation, thus
initialising the top frame controller.

BUG=682441

Review-Url: https://codereview.chromium.org/2661663003
Cr-Commit-Position: refs/heads/master@{#446834}

Former-commit-id: 1c17214f719b1e715aa6c64848c87176c2ac90b0